--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "@react-navigation/native": "^6.1.6",
         "@react-navigation/native-stack": "^6.9.12",
         "axios": "^1.3.5",
+        "deprecated-react-native-prop-types": "^4.1.0",
         "expo": "~48.0.9",
         "expo-font": "^11.1.1",
         "expo-linear-gradient": "^12.1.2",
+        "expo-splash-screen": "^0.18.1",
         "expo-status-bar": "~1.4.4",
         "react": "18.2.0",
         "react-native": "0.71.6",
