--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-    "name": "awesomeproject",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "react-devtools": "react-devtools"
-    },
-    "dependencies": {
-        "@react-native-community/eslint-config": "^3.2.0",
-        "@react-navigation/bottom-tabs": "^6.5.7",
-        "@react-navigation/native": "^6.1.6",
-        "@react-navigation/native-stack": "^6.9.12",
-        "axios": "^1.3.5",
-        "deprecated-react-native-prop-types": "^4.1.0",
-        "expo": "~48.0.9",
-        "expo-font": "^11.1.1",
-        "expo-linear-gradient": "^12.1.2",
-        "expo-splash-screen": "^0.18.1",
-        "expo-status-bar": "~1.4.4",
-        "react": "18.2.0",
-        "react-native": "0.71.6",
-        "react-native-check-box": "^2.1.7",
-        "react-native-safe-area-context": "4.5.0",
-        "react-native-screens": "~3.20.0",
-        "react-native-svg": "13.4.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "react-devtools": "^4.27.4"
-    },
-    "private": true
+  "name": "awesomeproject",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "react-devtools": "react-devtools"
+  },
+  "dependencies": {
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.5",
+    "deprecated-react-native-prop-types": "^4.1.0",
+    "expo": "~48.0.9",
+    "expo-font": "^11.1.1",
+    "expo-linear-gradient": "^12.1.2",
+    "expo-splash-screen": "^0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-check-box": "^2.1.7",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "expo-updates": "~0.16.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "react-devtools": "^4.27.4"
+  },
+  "private": true
 }
