--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "expo-splash-screen": "^0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
-    "i18next": "^22.4.15",
     "react": "18.2.0",
-    "react-i18next": "^12.2.1",
     "react-native": "0.71.6",
     "react-native-check-box": "^2.1.7",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
